samples/_failures_safe/1761530622_a7fe3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fccc8ac2.c: In function ‘main’:
./samples/SAFE/__tmp_fccc8ac2.c:183: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_fccc8ac2.c:182:5: error: expected declaration or statement at end of input
  182 |     if
      |     ^~
